

<resources>
    <string name="app_name">Scorekeeper</string>
    <string name="minus">Score2</string>
    <string name="minus1">1</string>
    <string name="minus2">2</string>
    <string name="minus6">6</string>

    <string name="initial_count">0</string>
    <string name="plus">Score1</string>
    <string name="plus1">1</string>
    <string name="plus2">2</string>
    <string name="plus6">6</string>

    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>

</resources>
